# sw-utils

./: .todo  AUTHORS  INSTALL  Makefile.am  Makefile.in  TODO  aclocal.m4  cfg.sh  config.guess  config.h  config.h.in  config.sub  configure.ac  configure.in  i686-pc-linux-gnu-wrap  libtool  main.cpp  missing  pkgadd.8.in  pkgadd.conf.in  pkginfo.8.in  pkgrm.8.in  rejmerge.8.in  rejmerge.in  wrap.in
libsw++/: Makefile.am  Makefile.in  pkgadd.cpp  pkgadd.hpp  pkgdb.hpp  pkgdb_dbm.cpp  pkgdb_dbm.hpp  pkgdb_text.cpp  pkgdb_text.hpp  pkginfo.cpp  pkginfo.hpp  pkgrm.cpp  pkgrm.hpp  pkgtool.cpp  pkgtool.hpp
libswsh/: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac  setup.sh
libswsh/data/: Makefile.am  Makefile.in  Pkgtemplate  body.inc@swsh  freshmeat_categories.txt  shflags.inc@sh  tmpl@swsh
libswsh/doc/: Makefile.am  Makefile.in  template.sh.in
libswsh/lib/: Makefile.am  Makefile.in  archive.sh.in  buildsys.sh.in  bytesize.sh.in  distrib.sh.in  fs.sh.in  pkg.sh.in  pkgmgr.sh.in  port.sh.in  service.sh.in  shdoc.sh.in  src.sh  swsh.sh.in  template.sh.in  term.sh.in  ui.sh  util.sh.in  xtra.sh.in
libswsh/lib/algorithm/: Makefile.am  Makefile.in  combine.sh  escape.sh  fmt.sh.in
libswsh/lib/archive/: Makefile.am  Makefile.in  cpio.sh.in  deb.sh.in  jar.sh.in  rar.sh.in  sevenzip.sh.in  tar.sh.in  zip.sh.in
libswsh/lib/buildsys/: Makefile.am  Makefile.in  autotools.sh.in  cmake.sh.in  make.sh.in  nobuild.sh.in  plmake.sh.in  pysetup.sh.in
libswsh/lib/buildsys/autotools/: Makefile.am  Makefile.in
libswsh/lib/class/: Makefile.am  Makefile.in  cache.sh.in  tempfile.sh.in
libswsh/lib/code/: Makefile.am  Makefile.in  bin.sh.in  perl.sh.in  ruby.sh.in
libswsh/lib/compat/: Makefile.am  Makefile.in  declare.sh.in
libswsh/lib/compression/: Makefile.am  Makefile.in  bzip2.sh.in  gzip.sh.in  lzma.sh.in
libswsh/lib/daemons/: Makefile.am  Makefile.in  crontab.sh.in  httpd.sh.in  named.sh.in
libswsh/lib/data/: Makefile.am  Makefile.in  config.sh.in  envdir.sh.in  html.sh.in  info.sh.in  list.sh.in  obj.sh.in  pdf.sh.in  reg.sh.in  text.sh.in  tree.sh.in  xml.sh.in
libswsh/lib/database/: Makefile.am  Makefile.in  mysql.bash.in  mysql.sh.in
libswsh/lib/devel/: Makefile.am  Makefile.in  compiler.sh.in  patch.sh.in  scan.sh.in  srcdist.sh.in  toolchain.sh.in  triplet.sh.in
libswsh/lib/devel/toolchain/: Makefile.am  Makefile.in  gcc.sh.in  icl.sh.in  msvc.sh
libswsh/lib/distrib/: Makefile.am  Makefile.in  centos.sh.in  cygwin.sh.in  darwin.sh.in  debian.sh.in  gentoo.sh.in  lsb.sh.in  macosx.sh.in  mandrake.sh.in  mingw.sh.in  msys.sh.in  opensuse.sh.in  redhat.sh.in  slackware.sh.in  ubuntu.sh.in
libswsh/lib/djb/: Makefile.am  Makefile.in  buffer.sh.in
libswsh/lib/fs/: Makefile.am  Makefile.in  dir.sh.in  file.sh.in  hier.sh.in  path.sh.in
libswsh/lib/net/: Makefile.am  Makefile.in  bridge.sh.in  cidr.sh.in  ethernet.sh.in  http.sh.in  if.sh.in  inet.sh.in  ip4.sh.in  ssh.sh.in  url.sh.in  www.sh.in
libswsh/lib/net/server/: Makefile.am  Makefile.in
libswsh/lib/net/www/: Makefile.am  Makefile.in  curl.sh.in
libswsh/lib/pkgmgr/: Makefile.am  Makefile.in  dpkg.sh.in  rpm.sh.in
libswsh/lib/pkgtool/: Makefile.am  Makefile.in  apt.sh.in  pacman.sh.in  yum.sh.in  zypper.sh.in
libswsh/lib/ports/: Makefile.am  Makefile.in  deb.sh.in  spec.sh
libswsh/lib/service/: Makefile.am  Makefile.in  runit.sh.in  runsv.sh
libswsh/lib/service/daemontools/: Makefile.am  Makefile.in
libswsh/lib/service/runit/: Makefile.am  Makefile.in
libswsh/lib/shell/: Makefile.am  Makefile.in  bash.sh.in  child.sh.in  cmd.sh.in  emit.sh.in  fd.sh  fn.sh.in  script.sh.in  trap.sh.in
libswsh/lib/std/: Makefile.am  Makefile.in  algorithm.sh.in  array.sh.in  ctype.sh.in  escape.sh.in  log.sh.in  math.sh  str.sh.in  var.sh.in
libswsh/lib/sys/: Makefile.am  Makefile.in  proc.sh.in
libswsh/lib/term/: Makefile.am  Makefile.in  color.sh.in  screen.sh.in
libswsh/lib/term/color/: Makefile.am  Makefile.in
libswsh/lib/trace/: Makefile.am  Makefile.in  strace.sh.in
libswsh/lib/unix/: Makefile.am  Makefile.in  group.sh.in  user.sh.in
libswsh/lib/utils/: Makefile.am  Makefile.in  rcat.sh.in  rsed.sh.in  sed.sh.in
libswsh/lib/vcs/: Makefile.am  Makefile.in  svn.sh.in
libswsh/lib/web/: Makefile.am  Makefile.in  freshmeat.sh.in  gnu.sh.in  googlecode.sh.in  kernel.sh.in  rubyforge.sh.in  sourceforge.sh.in
libswsh/m4/: db.m4
libswsh/src/: Makefile.am  Makefile.in  require.sh.in  sw.in
libswsh/src/utils/: Makefile.am  Makefile.in  acbootstrap.in  acbuild.in  acrun.in  fnsed.in  rcat.in  rsed.in
libswsh/src/utils/tok/: Makefile.am  Makefile.in
libswsh/test/: Makefile.am  Makefile.in  run-test-suite  test_compat_declare.sh  test_data_xml.sh  test_std_algorithm.sh  test_std_math.sh  test_std_var.sh  test_util.sh  test_web_freshmeat.sh
libswsh/test/data/: Makefile.am  Makefile.in  freshmeat-x11.xml
libtar/: ChangeLog  INSTALL  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure.ac  configure.in  libtool
libtar/autoconf/: Makefile.in  ltoptions.m4  zlib.m4
libtar/compat/: Makefile.am  Makefile.in  fnmatch.c  glob.c  module.ac  snprintf.c  strsep.c
libtar/doc/: Makefile.am  Makefile.in
libtar/lib/: Makefile.am  Makefile.in
libtar/libtar/: Makefile.am  Makefile.in  libtar  libtar.c
m4/: Makefile  Makefile.am  Makefile.in  bzlib.m4  db.m4  libtar.m4  lzmadec.m4  pkgsrc.m4
pkgbackup/: Makefile.am  Makefile.in  backup.cpp  backup.h  config.cpp  config.h  main.cpp
pkgmk/: Makefile.am  Makefile.in  layout.conf.in  libtool.conf.in  mirrors.conf.in  pkgmk-buildcmd.in  pkgmk-deb.in  pkgmk.comp.in  pkgmk.conf.in  pkgmk.in  toolchain.conf.in
scripts/: Makefile.am  Makefile.in  catexport.in  check-libs.in  frompkg.in  mkservice.in  pkg2rpm.in  pkgcheckdep.in  pkgexport.in  pkginstall.in  pkgpatch.in  pkgrelease.in  pkgstrip.in  srcexport.in  unused-libs.in
svadm/: Makefile.am  Makefile.in  autostart  startstop  svadm.in  ui
swconfig/: Makefile.am  Makefile.in  global  swconfig.in
(+3 files in other folders)
