EXTRA_DIST = \
	catexport.in \
	check-libs.in \
	frompkg.in \
	srcexport.in \
	unused-libs.in \
  pkgcheckdep.in \
  pkgexport.in \
	pkginstall.in \
  pkgpatch.in \
  pkgrelease.in \
  pkgstrip.in \
  pkgupdate.in \
  mkservice.in \
  pkg2rpm.in

bin_SCRIPTS = \
	catexport \
	check-libs \
	frompkg \
	srcexport \
	unused-libs \
  pkgcheckdep \
  pkgexport \
	pkginstall \
  pkgpatch \
	pkgrelease \
  pkgstrip \
  pkgupdate \
  mkservice \
  pkg2rpm
