noinst_HEADERS = compat.h
noinst_LTLIBRARIES = libcompat.la

AM_CPPFLAGS = -I$(top_srcdir) -I$(top_builddir) -I$(srcdir)

libcompat_la_SOURCES = basename.c dirname.c fnmatch.c gethostbyname_r.c gethostname.c getservbyname_r.c glob.c inet_aton.c snprintf.c strdup.c strlcat.c strlcpy.c strmode.c strrstr.c strsep.c
